fix: Mobile menu is now visible

--- a/css/style.scss
+++ b/css/style.scss
@@ -141,7 +141,7 @@ p {
         list-style-type: none;
         li {
             opacity: 0;
-            animation: fadein 6s;
+            animation: fadein 2s; // marginup 2s;
             animation-fill-mode: both;
             cursor: pointer;
             padding: 10px 20px;
@@ -159,11 +159,11 @@ p {
                 border-bottom-width: 2px;
             }
         }
-        li:nth-child(5) { animation-delay: .1s }
-        li:nth-child(4) { animation-delay: .2s }
-        li:nth-child(3) { animation-delay: .3s }
-        li:nth-child(2) { animation-delay: .4s }
-        li:nth-child(1) { animation-delay: .5s }
+        li:nth-child(5) { animation-delay: .05s }
+        li:nth-child(4) { animation-delay: .1s }
+        li:nth-child(3) { animation-delay: .15s }
+        li:nth-child(2) { animation-delay: .2s }
+        li:nth-child(1) { animation-delay: .25s }
     }
 }
 
@@ -176,16 +176,16 @@ p {
     // display: none; // hide for now to figure out centering
 }
 
-@media screen and (min-width: 720px) {
-    .hoofdlogo {
-        display: none;
-    }
-}
-@media screen and (max-width: 720px) {
-    .negenlogo {
-        display: none;
-    }
-}
+// @media screen and (min-width: 720px) {
+//     .hoofdlogo {
+//         display: none;
+//     }
+// }
+// @media screen and (max-width: 720px) {
+//     .negenlogo {
+//         display: none;
+//     }
+// }
 
 // Card style
 // --------------------
@@ -202,6 +202,8 @@ $cardColor: #5B86E5;
     cursor: pointer;
     transition: background 0.3s, color 0.3s;
     animation: fadein 1s;
+    max-width: 300px;
+    margin: 0 auto;
     &:hover {
         // color: $cardColor;
         // background: #fff;
@@ -224,21 +226,31 @@ $cardColor: #5B86E5;
         border-radius: 4px;
         background: #fff;
         padding: 10px;
-        margin: 0;
+        margin: 20 auto;
+        max-width: 210px;
         color: $cardColor;
-        position: absolute;
-        bottom: 35px;
-        left: 45px;
-        right: 45px;
+        // position: absolute;
+        // bottom: 35px;
+        // left: 45px;
+        // right: 45px;
         font-weight: 400;
         // -webkit-transition: background 0.3s, color 0.3s;
         // transition: background 0.3s, color 0.3s;
         cursor: pointer;
         border-bottom: 3px solid #5684F5;
         &:hover {
-            // bottom: 21px;
+            margin-top: 21px;
             border-bottom-width: 2px;
         }
+    }
+}
+
+.pers-links {
+    margin: 20px auto;
+    text-align: center;
+    color: #5684F5;
+    svg {
+        margin: 0 5px;
     }
 }
 
@@ -285,7 +297,12 @@ $cardColor: #5B86E5;
 .backbutton, .homebutton {
     position: fixed;
     top: 20px;
-    left: 20px;
+    @media screen and (min-width: 720px) {
+        left: 20px;
+    }
+    @media screen and (max-width: 720px) {
+        right: 20px;
+    }
     color: #ccc;
 }
 
@@ -349,7 +366,7 @@ $cardColor: #5B86E5;
 }
 
 .page > * {
-    animation: fadein 5s;
+    animation: fadein 2s;
 }
 
 .page > img {
